# CMake-Practice

cmake/t2/: CMakeLists.txt
cmake/t2/src/: CMakeLists.txt
cmake/t3/: CMakeLists.txt  README
cmake/t3/lib/: CMakeLists.txt  hello.c
cmake/t4/src/: CMakeLists.txt
